[project]
name = "financial-visualization"
version = "0.1.0"
description = "Financial visualization"
authors = [
    {name = "Bilal Onur Eskili", email = "onur@bilalonureskili.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
    "nbformat>=4.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "yfinance>=0.2.51",
]
